# spelling-tools

./: README.md  pyproject.toml
dictsync/: __init__.py  automerge.py  merge.py  utils.py
