[tool.poetry]
name = "dictsync"
version = "0.1.1"
description = "Synchronize spell check dictionaries across applications and computers."
authors = ["Jachimo"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.11"

[poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
